added redis replication, deployment for redis + gatekeeper via docker/kubernetes

--- a/Docker_K8S/gatekeeper/gatekeeper-deployment.yaml
+++ b/Docker_K8S/gatekeeper/gatekeeper-deployment.yaml
@@ -17,6 +17,9 @@ spec:
       containers:
       - image: gatekeeper
         name: gatekeeper
+        env:
+        - name: GET_HOSTS_FROM
+          value: "dns"
         ports:
         - containerPort: 5000
         imagePullPolicy: Never
