--- a/Docker_Kubernetes/redis-custom/docker-compose.yml
+++ b/Docker_Kubernetes/redis-custom/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3"
 services:
-  redis-master:
+  redis-leader:
     build: .
     command: redis-server --bind 0.0.0.0 --protected-mode no
     ports:
       - "6379:6379"
 
-  redis-slave:
+  redis-follower:
     build: .
-    command: redis-server --bind 0.0.0.0 --protected-mode no --slaveof redis-master 6379
+    command: redis-server --bind 0.0.0.0 --protected-mode no --slaveof redis-leader 6379
     ports:
       - "6378:6379"
     depends_on:
-        - redis-master
+        - redis-leader
