--- a/Docker_Kubernetes/redis-custom/redis-follower-deployment.yaml
+++ b/Docker_Kubernetes/redis-custom/redis-follower-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.21.0 ()
   creationTimestamp: null
   labels:
-    io.kompose.service: redis-slave
-  name: redis-slave
+    io.kompose.service: redis-follower
+  name: redis-follower
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: redis-slave
+      io.kompose.service: redis-follower
   strategy: {}
   template:
     metadata:
@@ -21,7 +21,7 @@ spec:
         kompose.version: 1.21.0 ()
       creationTimestamp: null
       labels:
-        io.kompose.service: redis-slave
+        io.kompose.service: redis-follower
     spec:
       containers:
       - args:
@@ -31,11 +31,11 @@ spec:
         - --protected-mode
         - no
         - --slaveof
-        - redis-master
+        - redis-leader
         - "6379"
-        image: redis-slave
+        image: redis-follower
         imagePullPolicy: ""
-        name: redis-slave
+        name: redis-follower
         ports:
         - containerPort: 6379
         resources: {}
