--- a/Docker_Kubernetes/redis/redis-follower-deployment.yaml
+++ b/Docker_Kubernetes/redis/redis-follower-deployment.yaml
@@ -6,13 +6,13 @@ metadata:
     kompose.version: 1.21.0 ()
   creationTimestamp: null
   labels:
-    io.kompose.service: redis-master
-  name: redis-master
+    io.kompose.service: redis-follower
+  name: redis-follower
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: redis-master
+      io.kompose.service: redis-follower
   strategy: {}
   template:
     metadata:
@@ -21,18 +21,15 @@ spec:
         kompose.version: 1.21.0 ()
       creationTimestamp: null
       labels:
-        io.kompose.service: redis-master
+        io.kompose.service: redis-follower
     spec:
       containers:
-      - args:
-        - redis-server
-        - --bind
-        - 0.0.0.0
-        - --protected-mode
-        - no
-        image: redis-master
+      - env:
+        - name: GET_HOSTS_FROM
+          value: dns
+        image: gcr.io/google_samples/gb-redisslave:v3
         imagePullPolicy: ""
-        name: redis-master
+        name: redis-follower
         ports:
         - containerPort: 6379
         resources: {}
