--- a/Docker_Kubernetes/redis/redis-follower-service.yaml
+++ b/Docker_Kubernetes/redis/redis-follower-service.yaml
@@ -6,14 +6,14 @@ metadata:
     kompose.version: 1.21.0 ()
   creationTimestamp: null
   labels:
-    io.kompose.service: redis-master
-  name: redis-master
+    io.kompose.service: redis-follower
+  name: redis-follower
 spec:
   ports:
   - name: "6379"
     port: 6379
     targetPort: 6379
   selector:
-    io.kompose.service: redis-master
+    io.kompose.service: redis-follower
 status:
   loadBalancer: {}
